--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -19,6 +19,8 @@ jobs:
       - run: gem install asciidoctor asciidoctor-pdf
       # HTML
       - run: mkdir -p build
+      - run: pwd
+      - run: ls -R
       - run: asciidoctor -D build docs/index.adoc
       # PDF
       - run: asciidoctor-pdf -o build/index.pdf docs/index.adoc
